@@ -11,7 +11,7 @@
 # Copyright (c) 2003-2006 Patrick Thoyts
 #
 #------------------------------------------------------------------------------
-# RCS: @(#) $Id: rules.vc,v 1.5.2.6 2006/10/06 18:10:41 patthoyts Exp $
+# RCS: @(#) $Id: rules.vc,v 1.5.2.7 2006/10/18 08:56:21 patthoyts Exp $
 #------------------------------------------------------------------------------
 
 !ifndef _RULES_VC
@@ -31,7 +31,11 @@ _INSTALLDIR	= $(INSTALLDIR:/=\)
 !endif
 
 !ifndef MACHINE
+!if "$(CPU)" == ""
 MACHINE		= IX86
+!else
+MACHINE         = $(CPU)
+!endif
 !endif
 
 !ifndef CFG_ENCODING
@@ -460,7 +464,6 @@ Failed to find tcl.h.  The TCLDIR macro does not appear correct.
 #!endif
 
 TCL_DOTVERSION	= 8.4
-TCL_PATCHLEVEL  = .14
 TCL_VERSION	= $(TCL_DOTVERSION:.=)
 
 !if $(TCLINSTALL)
@@ -494,7 +497,7 @@ TCLTOOLSDIR	= $(_TCLDIR)\tools
 !message *** Output directory will be '$(OUT_DIR)'
 !message *** Suffix for binaries will be '$(SUFX)'
 !message *** Optional defines are '$(OPTDEFINES)'
-!message *** Compiler version $(VCVER)
+!message *** Compiler version $(VCVER), arch is $(MACHINE)
 !message *** Compiler options '$(OPTIMIZATIONS) $(DEBUGFLAGS)'
 !message *** Link options '$(LINKERFLAGS)'
 
